--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,21 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# PyCharm
 .idea
+
+# React
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
